# trkt

./: .clang-format  .gitignore  README.md  TODO.md  trakt.apib  xmake.lua
src/: trkt.cpp
trktc/: .clang-format  CMakeLists.txt  trktcli.cpp
trktc/src/: model.hpp
trktcli/: .gitignore  README.md  conanfile.txt  meson.build
trktcli/.run/: Menu.run.xml
trktcli/subprojects/: README.md
